--- a/tms/templates/tms/index.html
+++ b/tms/templates/tms/index.html
@@ -9,8 +9,8 @@
     <title>TMS</title>
 
     <!-- Bootstrap -->
-    <link rel="stylesheet" type="text/css" href="/static/css/bootstrap.min.css" />
-    <link rel="stylesheet" type="text/css" href="/static/css/bootstrap-datepicker3.standalone.min.css" />
+    <link rel="stylesheet" type="text/css" href="/tms/static/css/bootstrap.min.css" />
+    <link rel="stylesheet" type="text/css" href="/tms/static/css/bootstrap-datepicker3.standalone.min.css" />
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -291,11 +291,11 @@
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="/static/js/bootstrap.min.js"></script>
-    <script src="/static/js/vue.min.js"></script>
-    <script src="/static/js/vue-resource.min.js"></script>
-    <script src="/static/js/bootstrap-datepicker.min.js"></script>
-    <script src="/static/js/app.js"></script>
+    <script src="/tms/static/js/bootstrap.min.js"></script>
+    <script src="/tms/static/js/vue.min.js"></script>
+    <script src="/tms/static/js/vue-resource.min.js"></script>
+    <script src="/tms/static/js/bootstrap-datepicker.min.js"></script>
+    <script src="/tms/static/js/app.js"></script>
   </body>
 </html>
 {% endverbatim %}
