--- a/tms/templates/tms/index.html
+++ b/tms/templates/tms/index.html
@@ -296,6 +296,16 @@
     <script src="/tms/static/js/vue-resource.min.js"></script>
     <script src="/tms/static/js/bootstrap-datepicker.min.js"></script>
     <script src="/tms/static/js/app.js"></script>
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-59105837-1', 'auto');
+      ga('send', 'pageview');
+
+    </script>
   </body>
 </html>
 {% endverbatim %}
