--- a/tms/templates/tms/index.html
+++ b/tms/templates/tms/index.html
@@ -136,15 +136,9 @@
                       <h4 class="modal-title" id="taskModalLabel">Task</h4>
                     </div>
                     <div class="modal-body">
-                      <div id="task-alerts" v-if="taskMessage">
-                        <div class="alert alert-{{ taskMessage.type }} alert-dismissible" role="alert">
-                          {{ taskMessage.message }}
-                        </div>
-                      </div>
-
                       <div class="form-group">
                         <label for="taskNote">note</label>
-                        <input type="text" class="form-control" id="taskNote" v-model="newTask.note">
+                        <input type="text" class="form-control" id="taskNote" v-model="newTask.note" placeholder="what to do">
                       </div>
                       <div class="form-group">
                         <label for="taskDate">date</label>
@@ -167,7 +161,7 @@
                     </div>
                     <div class="modal-footer">
                       <button type="button" class="btn btn-default btn-sm" data-dismiss="modal">Close</button>
-                      <button type="submit" class="btn btn-primary btn-sm">{{ newTask.action }}</button>
+                      <button type="submit" class="btn btn-primary btn-sm" :disabled="taskErrors">{{ newTask.action }}</button>
                     </div>
                   </form>
                 </div>
@@ -178,6 +172,12 @@
             <div class="row" id="tasks">
               <div class="col-md-2"></div>
               <div class="col-md-8">
+                <div id="task-alerts" v-if="taskMessage">
+                  <div class="alert alert-{{ taskMessage.type }} alert-dismissible" role="alert">
+                    {{ taskMessage.message }}
+                  </div>
+                </div>
+
                 <h3>Tasks <span class="label label-info">{{ date }}</span></h3>
                 <ul class="list-group">
                   <li class="list-group-item" v-for="task in tasks">
@@ -193,52 +193,6 @@
                 <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#taskModal" @click="addTask">Add a new Task</button>
               </div>
               <div class="col-md-2"></div>
-            </div>
-
-            <!-- Export Modal -->
-            <div class="modal fade" id="exportModal" tabindex="-1" role="dialog">
-              <div class="modal-dialog" role="document">
-                <div class="modal-content">
-                  <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                    <h4 class="modal-title">Export</h4>
-                  </div>
-                  <div class="modal-body">
-                    <span v-if="exportDates.length == 0">No Dates</span>
-                    <ul v-if="exportDates.length > 0">
-                      <template v-for="exportDate in exportDates">
-                        <li>Date: {{ exportDate.date }}</li>
-                        <li>Total time: {{ exportDate.totalHours }}h</li>
-                        <li v-if="exportDate.tasks.length > 0">Notes:</li>
-                        <li v-for="task in exportDate.tasks">{{ task.note }}</li>
-                      </template>
-                    </ul>
-                  </div>
-                  <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                  </div>
-                </div>
-              </div>
-            </div>
-
-            <div class="row" id="export">
-              <div class="col-md-2"></div>
-              <div class="col-md-10">
-                <h3>Export Tasks</h3>
-                <form class="form-inline" role="form" @submit="exportTask">
-                  <div class="form-group">
-                    <label for="from">From</label>
-                      <input type="text" id="from" class="form-control" placeholder="Date (yyyy-mm-dd)"
-                         v-model="export.from" data-provide="datepicker">
-                  </div>
-                  <div class="form-group">
-                    <label for="to">To</label>
-                      <input type="text" id="to" class="form-control" placeholder="Date (yyyy-mm-dd)"
-                         v-model="export.to" data-provide="datepicker">
-                  </div>
-                  <button type="submit" class="btn btn-primary" :disabled="exportErrors">Export</button>
-                </form>
-              </div>
             </div>
           </template>
 
